[package]
name = "xmas-elf"
version = "0.4.0"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "Library for parsing and navigating ELF data; zero-allocation, type-safe."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nrc/xmas-elf"
keywords = ["elf", "parser", "binary"]

[dependencies]
zero = "0.1"

[dependencies.byteorder]
version = "0.5"
default-features = false

[[bin]]
name = "xmas_elf"
doc = false
