[package]
name = "xmas-elf"
version = "0.6.1"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "Library for parsing and navigating ELF data; zero-allocation, type-safe."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nrc/xmas-elf"
keywords = ["elf", "parser", "binary"]
exclude = ["test-data/*"]

[dependencies]
zero = "0.1"

[lib]
name = "xmas_elf"

[[bin]]
path = "src/bin/main.rs"
name = "xmas_elf"
doc = false
